--- a/meshlib.cbp
+++ b/meshlib.cbp
@@ -2,37 +2,32 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="meshlib_Win32" />
+		<Option title="meshlib" />
 		<Option pch_mode="2" />
-		<Option compiler="gcc" />
+		<Option compiler="mingw64-gcc_71" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Win32/Debug/meshlib" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin/Win32/Debug" />
-				<Option object_output="obj/Win32/Debug/" />
+				<Option output="bin/x64/Debug/meshlibd" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/x64/Debug" />
+				<Option object_output="obj/Debug/" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="mingw64-gcc_71" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
-				<Option projectIncludeDirsRelation="-1" />
-				<Option projectLibDirsRelation="-1" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-g" />
+				</Compiler>
 				<Linker>
-					<Add option="-s" />
+					<Add option="-lopengl32 -lglu32 -m64" />
 				</Linker>
-				<MakeCommands>
-					<Build command="" />
-					<CompileFile command="" />
-					<Clean command="" />
-					<DistClean command="" />
-					<AskRebuildNeeded command="" />
-					<SilentBuild command=" &gt; $(CMD_NULL)" />
-				</MakeCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Win32/Release/meshlib" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Win32/Release/" />
+				<Option output="bin/x64/Release/meshlib" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/x64/Release" />
+				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="mingw64-gcc_71" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -41,12 +36,12 @@
 					<Add option="-Wall" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
-					<Add option="-lopengl32 -lglu32" />
+					<Add option="-lopengl32 -lglu32 -m64" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-march=core2" />
 			<Add option="-Wlong-long" />
 			<Add option="-fopenmp" />
 			<Add option="-std=c89" />
