--- a/meshlibw64.cbp
+++ b/meshlibw64.cbp
@@ -2,58 +2,64 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="meshlib_Win32" />
+		<Option title="meshlibw64" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Win32/Debug/meshlib" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin/Win32/Debug" />
-				<Option object_output="obj/Win32/Debug/" />
-				<Option type="3" />
+				<Option output="w64/Debug/meshlib" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="w64/Debug/obj/Debug/" />
+				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Option projectIncludeDirsRelation="-1" />
-				<Option projectLibDirsRelation="-1" />
+				<Compiler>
+					<Add option="-march=native" />
+					<Add option="-Wall" />
+					<Add option="-m64" />
+					<Add option="-g" />
+					<Add option="-fopenmp" />
+				</Compiler>
 				<Linker>
-					<Add option="-s" />
+					<Add option="-static-libstdc++" />
+					<Add option="-static-libgcc" />
+					<Add option="-static" />
+					<Add option="-m64" />
+					<Add option="-lopengl32 -lglu32 -fopenmp" />
 				</Linker>
-				<MakeCommands>
-					<Build command="" />
-					<CompileFile command="" />
-					<Clean command="" />
-					<DistClean command="" />
-					<AskRebuildNeeded command="" />
-					<SilentBuild command=" &gt; $(CMD_NULL)" />
-				</MakeCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Win32/Release/meshlib" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Win32/Release/" />
-				<Option type="3" />
+				<Option output="w64/Release/meshlib" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="w64/Release/obj/Release/" />
+				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="-march=core2" />
+					<Add option="-march=native" />
 					<Add option="-O2" />
 					<Add option="-Wall" />
+					<Add option="-m64" />
+					<Add option="-fopenmp" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add option="-lopengl32 -lglu32" />
+					<Add option="-static-libstdc++" />
+					<Add option="-static-libgcc" />
+					<Add option="-static" />
+					<Add option="-m64" />
+					<Add option="-lopengl32 -lglu32 -fopenmp" />
+					<Add option="-fopenmp" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wlong-long" />
+			<Add option="-march=native" />
+			<Add option="-Wall" />
 			<Add option="-fopenmp" />
-			<Add option="-std=c89" />
 		</Compiler>
 		<Linker>
-			<Add option="-lopengl32 -lglu32" />
-			<Add option="-fopenmp" />
+			<Add option="-lopengl32 -lglu32 -fopenmp" />
 		</Linker>
 		<Unit filename="include/meshlib.h" />
 		<Unit filename="resources/resource.rc">
@@ -97,8 +103,8 @@
 		</Unit>
 		<Extensions>
 			<code_completion />
-			<debugger />
 			<envvars />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
